Manager sign up

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
 							        </div>
 							        <div class="form-row">
 							            <div class="col-12">
-							                <a routerLink="/sign-up">Need a account sign up here.</a>
+							                <a routerLink="/manager-sign-up">Need a account sign up here.</a>
 							            </div>
 							        </div>
 							    </form>
