--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -43,6 +43,7 @@
                                     <input type="text" class="form-control form-pwd" placeholder="Email"  formControlName="emailControl" [ngClass]="{ 'is-invalid': employeeFormSubmitted && ef.emailControl.errors }"/>
                                     <div *ngIf="employeeFormSubmitted && ef.emailControl.errors" class="invalid-feedback">
                                         <div *ngIf="ef.emailControl.errors.required">Email required.</div>
+                                        <div *ngIf="ef.emailControl.errors.email">Pease enter a valid email.</div>
                                     </div>
                                 </div>
                                 <div class="col">
